# crypto-quant-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
archive/: README.md
archive/collectors/: ingest_1m.py
archive/notebooks/: 01_data_check.ipynb
archive/scripts/: ingest_all.py
data/db/: _tab_index.d  tables.d.1
research/: 02_strategy_validation.ipynb  step0_export_data.py  step1_data_prep.py
research/backtest/: analyze_results.py  parameter_sweep.py  run_simulation.py
research/experiments/: run_diagnostic_batch.py
research/pipeline/: fix_candles_1h_dedup.py  step0_export_data.py  step0_export_data_full_year.py  step1_data_prep.py
results/pairs_mean_reversion_2025/: detailed_backtest_log.txt  entries.parquet  exits.parquet  manifest.json  metrics.json  returns_matrix.parquet  valid_pairs.json  window_analysis.csv  window_analysis_comparison.csv  window_metrics.json
scripts/: check_ingest_progress.sh  debug_db.py  ingest_all.py
src/: main.py
src/adaptive/: __init__.py  config_adaptive.py  live_regime_tracker.py  market_regime.py  online_adaptation.py  regime_filter.py  regime_parameters.py  sector_diversification.py
src/api/: README.md  __init__.py  main.py
src/backtest/: __init__.py  accountant_filter.py  config_backtest.py  data_segmenter.py  diagnostics.py  exposure_controller.py  kalman_state_io.py  pair_kill_switch.py  performance_report.py  pnl_attribution.py  pnl_engine.py  position_sizing.py  signal_generation.py  symbol_blacklist.py  (+4 more)
tests/: test_safety.py
(+2523 files in other folders)
